clang/test/BSC/Negative/pseudo_destructor.cbs
// RUN: %clang_cc1 -verify %s
// Test that pseudo-destructor expressions on scalar types don't crash in BSC mode.

void foo(void) {
  int *b;
  b->~d; // expected-error {{undeclared identifier 'd' in destructor name}}
}
